src/main/java/com/example/stream/quarkus/registry/model/error/AddressSuccess.java
package com.example.stream.quarkus.registry.model.error;

public sealed interface AddressSuccess extends Success permits AddressDeleteOk {
}
